# ChangeLog for dev-python/pyside-tools
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyside-tools/ChangeLog,v 1.27 2013/03/02 20:11:33 hwoarang Exp $

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> pyside-tools-0.2.14.ebuild:
  Move Qt dependencies to the new category

  19 Oct 2012; Patrick Lauer <patrick@gentoo.org> pyside-tools-0.2.14.ebuild:
  Restricting python 3.3

  08 Sep 2012; Davide Pesavento <pesa@gentoo.org>
  -pyside-tools-0.2.13-r2.ebuild:
  Remove old.

  03 Jul 2012; Agostino Sarubbo <ago@gentoo.org> pyside-tools-0.2.14.ebuild:
  Stable for amd64, wrt bug #424221

  02 Jul 2012; Jeff Horelick <jdhore@gentoo.org> pyside-tools-0.2.14.ebuild:
  marked x86 per bug 424221

  01 Jul 2012; Davide Pesavento <pesa@gentoo.org> pyside-tools-0.2.14.ebuild:
  pyside-rcc tests are not (yet) supposed to pass against python3. Thanks to ago
  in bug 424233.

*pyside-tools-0.2.14 (02 Jun 2012)

  02 Jun 2012; Davide Pesavento <pesa@gentoo.org> +pyside-tools-0.2.14.ebuild:
  Version bump, adds python3 support in pysideuic. Thanks to Rafał Mużyło in bug
  419179.

  04 May 2012; Patrick Lauer <patrick@gentoo.org> pyside-tools-0.2.13-r2.ebuild:
  Migrating dev-util/pkgconfig -> virtual/pkgconfig

  22 Apr 2012; Markus Meier <maekke@gentoo.org> pyside-tools-0.2.13-r2.ebuild:
  x86 stable, bug #401789

  14 Apr 2012; Davide Pesavento <pesa@gentoo.org> pyside-tools-0.2.13-r2.ebuild:
  Use virtualx.eclass to fix tests, bug 411971 by Markus Meier.

  14 Apr 2012; Agostino Sarubbo <ago@gentoo.org> pyside-tools-0.2.13-r2.ebuild:
  Stable for amd64, wrt bug #401789

  10 Apr 2012; Davide Pesavento <pesa@gentoo.org> -pyside-tools-0.2.13.ebuild:
  Remove old.

*pyside-tools-0.2.13-r2 (10 Mar 2012)

  10 Mar 2012; Davide Pesavento <pesa@gentoo.org>
  +pyside-tools-0.2.13-r2.ebuild, -pyside-tools-0.2.13-r1.ebuild:
  Restrict python 3.* because pysideuic is not compatible with it.
