@@ -3,25 +3,25 @@ Hash: SHA256
 
 AUX 0.2.13-fix-pysideuic-test-and-install.patch 1117 SHA256 f03cfa89cdef59b5e94713297aecb5e9cb66d0d6793c21078ebf27df4adc14c6 SHA512 2ba8e7c00dc231ce1a92815697448c71da31e2c84c8b20339f33520428c4a91dc38cd16d861fb5ffb5896f4e91e9416f9f2e04f7ba9cbbcc3f21f12cc1350b63 WHIRLPOOL 03532faaba4b9718f844ac3910c66262ac78d293eccd4b2606d941fd0d7c5f00228b4373ed1546f1f3a94742b7d7c68d95de399bea6fa0ff1014e593cbf1b440
 DIST pyside-tools-0.2.14.tar.bz2 76575 SHA256 cbd5d2ecf872434442f095766d5abf29733e3cc474da3e2e679e93b6bc0bb600 SHA512 8da71d0ddf03d5bd974d944a9282fced4602458f4d31dcd119f085ae7555e80518b30def97c73545d5ce3df475567a14ba14b12687b24e822747711bc69c9d59 WHIRLPOOL 33eccfdb8ad582973e80fb98b91b1af818b0eeb6de832c168e9293cf36db41bd08aca8dca1a1e674253b0e57bdc0cce800da5c39cbe8dcad2341b38d23746435
+DIST pyside-tools-0.2.15.tar.gz 78989 SHA256 8a7fe786b19c5b2b4380aff0a9590b3129fad4a0f6f3df1f39593d79b01a9f74 SHA512 7cee288b733e5f83a01683d7fc8f1017c044e46dbb02489c5e763e37db4e24f319ffd593e001ee6ca5a21a34cf1a6009ab1d4c9e4102c60693992b6f2f7c8991 WHIRLPOOL 23d7a325f548cd1d95b91c40d5c2ccbdd70a25328948f93b5232bf8d1177674899bfdd51161873c34be5245d20c4d202a3eed29ce7fa10399cabad9e84b2e698
 EBUILD pyside-tools-0.2.14.ebuild 2204 SHA256 a2e88a90173668c04d4c53ef76c28caa0eb67469ae3dc9700603a9553a990470 SHA512 cbb00a1a003af80cd36327d723d33bbc5c0bbb0fd6688b57edc9865774915cd2f563fc23936eb0097e335e8b3a85d5df91783f451b03a339e4c0a513605aa00c WHIRLPOOL 477105e0e8f3a72af32cb7e54b5d6a3818917e505191adc4aab5f9014add9da8677b03cd1ba3b3ff3106ef8b0c24fd4f2acf8316d2d5ff0c7d044b4a070434dc
-MISC ChangeLog 4517 SHA256 3f8403ae77aff77adf5077e6768d055aa1f0e26df45a338042efd905d9668651 SHA512 462cf76745b74f5e1a04c4a89efcbdbcf27dd5d6cad71904a44525aa4f1d44f706e7fc2f1e312bec39dce5142d3a494db4efaf16717eb2ad181d56261e66901f WHIRLPOOL aaea12db670a126f4d7a90302e1b061e15f936f9e9162c63089df6162cc94f96436347f2700f46825c7dea6a5eaee7af02686e301573f47620cbb716767cf14e
+EBUILD pyside-tools-0.2.15.ebuild 2247 SHA256 f8201b84297d901fd7634aabdda40be2106d5f7ff51ba0af32712a8aec2b25a2 SHA512 d9f6962312a84476d3dc83378dab87667450cf1d5ebc92cda429667bdba5a8a68022bafa3179b61e0cd2e80f35621ff5ae4ed6c74b4b0aa90d4fefd9f7c443a0 WHIRLPOOL 2b0ca0a7e05fac6d0cc5013fd504da3fd9a3ec0cd59b1078f5deabb968d0fd57788ae0ab98139af64792cdd68f3128722b3e1da88d346fd827cd304f0746a042
+MISC ChangeLog 4645 SHA256 eced8ef8c0b69d2a89fc2aaf69536bbb73022e4749ee52f2e3d45446478de5ab SHA512 d56ca8353abef8d968b2236c9a8fc6053cec4f200c50b1abbf5bae5bb5686d7a728fa0e0d631872976642d0d011a8efa531327c7bc1ba517c0382d180ddfe60b WHIRLPOOL a75162ac55e792822f1cd67c48c32e5addcb47e98e5f1bd0fdf638bfd031784c584f4dc6f108ed83c5146f050225dd0bc45928735f53433baef100f6ea3f69e6
 MISC metadata.xml 155 SHA256 94ed5876ef16dbc191744ff6b8939a0f428fcb8add316d898880e1c4c880b9e7 SHA512 f05c8982778167c3667c9246b9730ba49fec2967731ed2c615e31a7fddc220fcea8c0843caa70a14957c8c4910892c512b6f2e00a9724d65e6032e1289f4562a WHIRLPOOL 25ccd49f04da07c8525fe18b21229764bb4104938abefc6c953bf9caa533dd5c10ae7b3f80a1251182e6c1520c09383d9f1d0ac1dc74832a99299c9be27406c4
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJRMlzzXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88E+AP/2weScVdozpB2xghCN10zuvI
-j0Mbmh/dNidKlTCH6Ty+jfoOhWLhLJ61+8klNp0o7mYFqu/x/VoOwFhFeE7aQocB
-UEceycw901LAtYk1ug8fCgBVk6efyWPFCbbQ4MCMFQsZczISeIzk5cBvgDPH45EE
-AE2YHQ6C2FfLHmwCgcIljLjhWPSgDHtQevd+wI5VRdSsnvBLbGCflQnysqT0nl+c
-h8ZZPpU3fAMNndseXipXJR2DpIJFAqDZrYF4UUwC6KmOBJFFrqYBFj1DSGtM19mm
-Di7uv36/L1OPQVzLkQz+v8m+98ardS8FAwESzrW9Wsf/cBXtkoJhNA0PEVQOX4oy
-8Bn0NWfL9ugvXsQX6z+cCOyYFscqtoCOBk+DhGfux86RzAuvuMvX0cV4DCHDQvDG
-lBIr3QZtSksAAVXf3z6zto2ycUiOZ8B7mJQtevWOm9WD7/GJBJkyiO0BQn4B8oQT
-fO++VeaJHm/DP8rZVnKbhp62Jb2AAwwlbe2keF5m2KqHy10PrZdUzlHLqKEcswn8
-52ScSFLbMV52O4vmHb8MitT4IIiuOcehVmPv3DuGmgz4P+hQwhn/1+y7SUKnTGwZ
-ASu+jTibb+fu/P1voLZ/U2ZQpT8lMcsUsS9mqREaGwlJ3LxnQMnJrDtDIiVklyNI
-LC9nf/6gjtyD6233O1xW
-=K8hJ
+iQIcBAEBCAAGBQJShCEmAAoJENXLsxwXqFxyVF0QAJyTkxsBrpqtrIbrKtkW2yYU
+bXw0tnat1/OZhcxptmbJB4YMbrvfqleGRWJjEk03v3Z4A3p7o4xCbAcD6XPKZ7iQ
+aEzeCXWeeJttWBFRjmBN5WM4OiWXNvA+oI1dMOI440QGlXlqLXEY+O/KYsKRCy9z
+3hqozRnhgIlAHD07MlD9mNWVxpTzeZDd+6yM/b+9xFEy6RQU/e7PFgDSmuW5ojl+
+FyjBaBBXZWxQERP5md3pCsw8uSeKH4IFR1CpFS07BctPM3FjT9wroD0T9+ExHGkV
+YPPv/WRQKMmfu0GEm8LOwzxH+9JbvZGr0R17q+kQ5CQ9dnBOGIYXy4Q+zTvgwzR+
+Rn0c3KgmraEwkDbPIHCjWKw9kaIaJc5KUeXAXI4R6hlRNRpKSyLIcJMCaQOteBSX
+ke11ZTAocuwIrhVwZuafqF+XIBTaTu+UgHTRflXrkyIp6LKat7dNyuft38Bvzzti
+mGuplwCIg3pGC1RqP2gII0qsjOEBfxueMUB4nrImxm8Wz7uelr8D4xaTlryqp3DN
+EpktRY6+4FgTAZZiZRVsJJfXW1UWmDpId0Ksz52Z4I0RFBXi+y2SyMx0QVIdvGk5
+lH7ikfSQ7GmSbzHPat6Dm/Y7LuVGEn699qD9ZcoMneOEmGYVVtfPWt7ptKCrIgCD
+xEpf6LjUslG9JqYnSDB9
+=P0zz
 -----END PGP SIGNATURE-----
