@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst postrm prepare setup test unpack
+DEPEND=>=dev-python/pyside-1.2.0[X] >=dev-python/shiboken-1.2.0 >=dev-qt/qtcore-4.7.0:4 >=dev-qt/qtgui-4.7.0:4 test? ( virtual/pkgconfig ) sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) || ( =dev-lang/python-3.3* =dev-lang/python-3.2* =dev-lang/python-2.7* =dev-lang/python-2.6* ) test? ( !prefix? ( x11-base/xorg-server[xvfb] ) x11-apps/xhost )
+DESCRIPTION=PySide development tools (lupdate, rcc, uic)
+EAPI=4
+HOMEPAGE=http://qt-project.org/wiki/PySide
+IUSE=test test
+KEYWORDS=~amd64 ~x86
+LICENSE=BSD GPL-2
+RDEPEND=>=dev-python/pyside-1.2.0[X] >=dev-python/shiboken-1.2.0 >=dev-qt/qtcore-4.7.0:4 >=dev-qt/qtgui-4.7.0:4 || ( =dev-lang/python-3.3* =dev-lang/python-3.2* =dev-lang/python-2.7* =dev-lang/python-2.6* )
+SLOT=0
+SRC_URI=https://github.com/PySide/Tools/archive/0.2.15.tar.gz -> pyside-tools-0.2.15.tar.gz
+_eclasses_=cmake-utils	92319f03251f1235bc887cc84e5aef21	eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	65cef1287b9d62b1a0f180765d1e0c69	multilib	892e597faee02a5b94eb02ab512e7622	python	305197b0aa1194fa3ef67ca21f6faa7e	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	vcs-snapshot	58b766562c9fbfb3268b04e33cdf2f66	virtualx	73cfc129b4b9ba23aed1abb10c825d86
+_md5_=8eb69c047b293e3342a20e59415e7e06
