@@ -173,9 +173,9 @@ DIST gcc-4.8.1-patches-1.2.tar.bz2 17431 SHA256 964aed7e2c317be99eacbd0f4e7e6190
 DIST gcc-4.8.1-piepatches-v0.5.7.tar.bz2 14260 SHA256 3edd9c0592716a5cd544af470c61448a0c5cb81d15ce0bfcf77e660a15546e60 SHA512 e471c852340cac7acef4540d0e2c266039e284952ec14cdb39cc732fd3572fed47f4912389f658916d9cb300ecd29d52734f2b7c003ef7acb33567af0211688c WHIRLPOOL fb95580a4969f3b447a4097d0ff86d243c71546e145ed7c290110a55339c2367fee2cb3f36b6a8c64e0f07d04c7a512f191eb2d7ab9e93aa759a8fd01d514317
 DIST gcc-4.8.1-uclibc-patches-1.0.tar.bz2 3004 SHA256 365b114f9fff51950a20870edeca0679bd0942ae4fe5d68b8ddc8e488d550aeb SHA512 b79ef258b0dc82286a5e246f7e02c3fe54f4445fe0ce723263853ce1f92a0c9fad4c254e09664d31472de7a7a6eb8e96225bc3a5613dd572ff1037d8c1668220 WHIRLPOOL 76f7485a01c0e81f9c20108c94ea40bcb6f7e739d2f5632eed92c1a2f3778cd620df2b9a663520ca6978c468d0ab6548f491c4ce515924f1e666798f002fee71
 DIST gcc-4.8.1.tar.bz2 86753166 SHA256 545b44be3ad9f2c4e90e6880f5c9d4f0a8f0e5f67e1ffb0d45da9fa01bb05813 SHA512 1becc874aad77a469069b6d9da4158aae9e013e24afa9364fe4feff9a5094d0673ee7694b3840e892c860f73a56b3ece6174338a8214438c42b9f86dd6c35ea7 WHIRLPOOL c706fa4445bbf4b9503c78b7e03da6adeadc3c736d208edb65059ddf23a08875dfa1ac92ccaafb3dd72ecbceb15a0de5814c62104fb94f99032232fbc50ab82c
-DIST gcc-4.8.2-patches-1.0.tar.bz2 15946 SHA256 38f70c3909888c0326e87646c67570b5b6f743754341697bdb17642f83bf35ac SHA512 2e2dacdc6949309347c626e26c4cf45e9c9fe9ce4ab78ebd6066a4666d0f81973f52d2cedc01c468be46455608460b905a90399303af4a2fb84f8c72bf10bcd0 WHIRLPOOL 3c3b8e00a083b1e9be8a58551dc622c187d76b60a83589474d977be1c29ad35f6ee18031d77b6bf318ec2ea6ebe0b47390571149e2a782bc56fcd6b94afd0654
-DIST gcc-4.8.2-piepatches-v0.5.8.tar.bz2 14081 SHA256 084157597c9eb1de7eb97abf4d7174931ce4ed6fe5e6c2c36cd2dffe33c16ce0 SHA512 883581d3e5d11632bd6d25dafe6735ac78783350006fe020dd2b20525ac45e93b6fab8c2dac62e2b7c8acfe5045224a78ea9fc563f298a9d1c843d32c26b22f4 WHIRLPOOL b9e03cf356e65df8938bae1888aea5464f391a273df197ba4c296c6bc50501de6ebf4da08da7716f45767772f351496192d1766c481a68dc1085bc80cfef4801
-DIST gcc-4.8.2-uclibc-patches-1.0.tar.bz2 3015 SHA256 f2c242a3d6f4040d019a249322d452e3d6a878f0bdb51b34294e9e46536c81e3 SHA512 f0a98efd3972e9ea224cd0bcc13d321e273e403261dd29154164e213873a79a0861ec5afe21156bd17de4a63a6d4a21c86f9aa719ff17356d9b2c81f36f0ce99 WHIRLPOOL cf295d4126e5b42a75391a22cc72f4b02c61b99c9d94f1175a57c48a7bece7166e76f875660ffe662b9b524bf412586f616a94144cbba0e25ae07f2994aa7eec
+DIST gcc-4.8.2-patches-1.0.tar.bz2 15931 SHA256 868723027ed356a9ea69771e3232aa534ad77b2c82526cf1ff928678b1770376 SHA512 fc465d985d3414a4f34c2eede17b79dbe14a176aa02e4e9890c2f94c920a1806394f572bc0fb622b09ed8e1488dffeb22bb6215eca87b3da5d22c98a9c835903 WHIRLPOOL 106e1d15d083f2811776507b4e8a3b25a1e68d9c50d8340cd60b58b975f4a20561412d5b4089d5951fce6ea9aa17494da8169b7a74dc5dd7533f609cb7e8ddb9
+DIST gcc-4.8.2-piepatches-v0.5.8.tar.bz2 14061 SHA256 cf4a945642be8b591805b1089025bd466f4e70d849d9e6dae63848fa750f1b83 SHA512 8e86448c3e251367869a766dd1805d2cf43a8b7da32f15a23c1443ff669336d892ced4ca01b378e79e177b7838ed917c46d6eb992c768bcad76df35da721492c WHIRLPOOL 2aabe13aed7c89bf63f1c3fc605f44ff5edf2a8addbc2baf96ed4711154253f2dc35d54d72e5fb0c797c489a35febb898facddb4a17413110fb8e12d1e20e411
+DIST gcc-4.8.2-uclibc-patches-1.0.tar.bz2 3014 SHA256 040343c06826356b57aabf54bdf6f962cb6173d36c9a1cc63be1238f9a3c7877 SHA512 933894112b937ddbecb66028489f61ef19ac323cbce8d9a13fa32f4325e608feca53f3570a173141d30c9b9dbe1dc3ace6dbff4814cefc1721b2f7a0d1adfd4b WHIRLPOOL f17f3c14bbaf639afc2408d3b1f1132acb191a7953196970aa499087afa62fb28e3a9eb0d0b32e98effd8bca72d474bd3cc96c12b2668062b6c666332a734ecc
 DIST gcc-4.8.2.tar.bz2 85999682 SHA256 09dc2276c73424bbbfda1dbddc62bbbf900c9f185acf7f3e1d773ce2d7e3cdc8 SHA512 2a3927481707b3bb7171076b596d9b69084edac82460df6fb35395592dd1e8fc5665577702ca746d5b454dec68b1c4e31b9de6adc9865d482f4b8736ec648b10 WHIRLPOOL 5ebe564faf13634e7f2744dc13421ce0a3faa06b35d425f4b6983e74a4e93b4c21955823013f7a5530e7ea9e9d0ecfd68cb79950e94333ed3e44aaa4dfbdefe7
 DIST gdc-0.24-src.tar.bz2 1012099 SHA256 cc6a97c76c9e6db31e76ff97014d24b3d43e21f018a3c6218e3fb2a4500fc79a SHA512 9aec7e4b102e602dfb61cd09ea4b4a96af637ceb3d726235261d09ebd35dbd416abcbfe0e46918e48474bd241fe9bb29abc145a65aa834669295aaee4fca0686 WHIRLPOOL 22322b0c3e2d67b3b37bd7fa92a29c593688f934d4ffd62b9cc87eb63a44a4f8bbc9d75cadf11209c73bdc9942c9b4430036629d0eefcd04de9055c502b85f12
 EBUILD gcc-2.95.3-r10.ebuild 936 SHA256 55c4d595847fdd061abf1b244d643a3c375d2ed14bc419e092e2d81774dc0d78 SHA512 d9b4757fc2215f5a35731e0cd3490be539b851a08a4873de404ac26857a48a018a81fa36040aa9fd094f603fcad11f5a8ce49e610a05bec76b18eeecbfa77654 WHIRLPOOL 2a90c8f28228e2b91dd5f16de48a038bbb1e1624c2db7687c88e7f014b220a5b566864c6d3546889b55b1f0db605b12e32bf70a328054d318e5141b6a0247623
@@ -210,17 +210,17 @@ EBUILD gcc-4.7.3-r1.ebuild 1893 SHA256 57f83dfa0c043eb45c988be54dfdee0fb1afb1ecf
 EBUILD gcc-4.8.0.ebuild 1921 SHA256 ff50e93f64c1ad9df975346afdbb84352bdbd12053fa6e27ce856f7863b05a5e SHA512 abbff3d2f52d93f13c1d8f862ed3cbfa58fb345b10301fd0eef1e627e36646e8db183b92aba79963d0ce281622148c8cb649285a68b5af5a719f542cefe80f72 WHIRLPOOL 26dcf1e69e4b610ba8f05504750f5e2000e5d5a72fac3dab4fe568eb18da20d7806605c2428cdf9316d6012502277e0dbd417fa8b4225d7bc782c46e0c3b2e15
 EBUILD gcc-4.8.1-r1.ebuild 2006 SHA256 773bcf16efc73ec294ff544d862ad5b9e43169ed3814fdb6be8f531c3b83b3a5 SHA512 33412103dc9c983697da154da496d5a55aa18a85410bbdc774954ef3c4fd58ec887625dab19f9f6de00009da1d124ffc165bea9e765b74ab9c4e088cf1e20a9f WHIRLPOOL 57d3d06cddf38740365d85fc6819f524a1bff725d4895c22c502be0f2bb412370288e7093c541e3e7b6a118d62cae44d3a10e8154ba352577a0c52942dd1e4f7
 EBUILD gcc-4.8.2.ebuild 1890 SHA256 eb1777a20896ae344a802d79d59ef0114d2cbea7c89c87ad238032b42a053bcc SHA512 8265b468b84d081b0383b04c986d6296f1811155eafb5f1516078d5bde5c6939bb4014d702716ccfe7c03679753d230c0ff22cfefc1ad241b483cdcbb53e7070 WHIRLPOOL cca32136ed21b87fe955ba42eb2f318fb384e7a9dcdc8694c5eccc4902f3338a3a5f91576330cec4028b8fb240a6f2865b764e9e88328bbf211438178bc84f5f
-MISC ChangeLog 56105 SHA256 13c302ffb8c61cea5a46646c92935dde9623727e3c5f601352831dd30a33172a SHA512 ae0bb4fbf5baa5f261d8f76f02c83d9c38000e20f2545a0560b6efba8d3935130dc127692ddc8d437058303e2b1821902a3193a489291f12bcd0cb4e1e752d07 WHIRLPOOL 91648c7d9f177d85b541d610cc3d34327f7f032f9744af9aae24e50f3ed5f88cdf5fefcbe6dd7b13472e90efaad72c2de54c3641b4a22899d6210ad2284237f2
+MISC ChangeLog 56181 SHA256 e1bc01e119ceef8e9e144ff9e57dd5b1731ca74180cd2397401cf4ee5d7b765b SHA512 88e4248e266bfe32ef509bcc02bc316829e787d29de62a12465c586ad30404410b6ece95c6ffbb5af6ddf0796fe493f43cde1facba3a7e7f2d430dc9388f866e WHIRLPOOL c2a70f4a4bd55b1f4ed8a469de5a9e361aa75e563449050382e3544f3f8b14222c8f31b64112c6bfd5ec79020efccc4b176a228dcdc5f31ff35cacafc595dc1b
 MISC ChangeLog-2006 112483 SHA256 108a7803efc91b08dd27ca4a83468637222a0685760f63bce724cb486fbc4022 SHA512 2887a66d03f4e1a9c60c743d7aa22147bdd95900b9e759c760a63f1a60c90008585b10b4f46ecc26e0149427bbdb8b83a9de4546d75e9ad935dd8e5377bf8870 WHIRLPOOL a2e1df0a7cead4373b5aeda333d952407049e1945f0a4e7774e1249e9f08ee33faafe0e74adec28b641bf037b8d6a350f45760a25c15e769b23eadb84b7ea48e
 MISC metadata.xml 2124 SHA256 5cebe076e2f23113d5c766ff5ee6f3e10caf2d7aee41e27c2cf7bf30c755f6c4 SHA512 b992f6a96c221f31de47e05962f98c346227b3d9a63fa112f1f9d23f50fc771ede8633f0a40f9847ae09b6d6528b87a54d29fcd408d72bc94881854390d44128 WHIRLPOOL f64012f6b72f8a13b71de5127ffe19b073d9f2bc5099044a8e0e8e6902edb705fa01c722e733c7c084d21804fb72a7c4fe10189846854f450b401d0d2bbbe5e4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSgWzFAAoJEO04vUmVeoRjm6MIAL0FTM52OVsdqzml/sa+7aDL
-v19ybAYAXXTm0BcbfL3DjZ+MdYDHgRZlzGglBksH+EJolCF3WNOoE0+KNxuwhBZf
-mtncaMGHAb+VrqsHhFs+1uI9zjFDaAtnO5UUvjk89JLi4LRD57H0vOtztZHZmD5W
-oCcQ4exNb4aiiVcSL4KmCqbY0BTBqajHd629Xn5y83Ef4nB/JRhYfmXphannCXD3
-YeYjU7ffbhF/K9LHHIXqoXw0QSaYbJdMwS1WPIKyRbYtgLcZ6BA/IecxfNVv1mIq
-T2JNdZiA4bXj9pBo/u+hjDOYN15ekzBwm7ROah1eFf7sAWAuclgZSuLRgJtrttQ=
-=h2sl
+iQEcBAEBCAAGBQJShCoeAAoJEO04vUmVeoRjk0AIAJyT8bYr+1p/KfMASCJZgOhY
+65lliyUVT48/1XFcCg+yM+ez9lZhqIe39l9sZ7SslKa+K2vA/ZEOY4lmLtq9Ht3f
+/Bf0DiwtSUrYxYApWPky4yckH/k1haf31yqcTwCCd3XQg7hVJfMMKE7IZzyR7ZmB
+Io5q+6bXOgWtSjSJsQCBns67Z4RfClgp7ZHQazWAgZLqocOqMqvWYJEWfRa99eus
+5EuFo2FQhzsfCrC3ll1TnuZuYmsVa9rFxoZfS7q9aE0a6LCtE6jsXnr5f+CrL/OM
+XxeBnyHI9iBTaZXjWbQkL8GxgbSnLRQqk/bu17uDUQesX/M0OWGdoTcaTvyXSro=
+=OryC
 -----END PGP SIGNATURE-----
