@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/pyside-tools
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyside-tools/ChangeLog,v 1.27 2013/03/02 20:11:33 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyside-tools/ChangeLog,v 1.28 2013/11/14 01:02:29 pesa Exp $
+
+*pyside-tools-0.2.15 (14 Nov 2013)
+
+  14 Nov 2013; Davide Pesavento <pesa@gentoo.org> +pyside-tools-0.2.15.ebuild:
+  Version bump.
 
   02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> pyside-tools-0.2.14.ebuild:
   Move Qt dependencies to the new category
